<resources>
    <string name="app_name">FilmsReview</string>
    <string name="actual_text">Актуальное</string>
    <string name="favourite_text">Избранное</string>
    <string name="cinemas_text">Кинотеатры</string>
    <string name="favourite_fragment_is_chosen_text">Выбран фрагмент Избранное</string>
    <string name="cinemas_fragment_is_chosen_text">Выбран фрагмент Кинотеатры</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="actual">Актуальное</string>
    <string name="favourite">Избранное</string>
    <string name="cinemas">Кинотеатры</string>
    <string name="save_comment">Сохр.</string>
    <string name="comments">Комментарий</string>
    <string name="Error_rus">Ошибка</string>
    <string name="movie_name">{movie}</string>
    <string name="history">История</string>
    <string name="tab_name_actual">Актуальное</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Вход</string>
    <string name="sign_in_action">Войти</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистироваться</string>
    <string name="send_verification_email_successful">На вашу почту была отправленна ссылка для подтверждения регистрации</string>
    <string name="send_verification_email_error">Не удалось добавить email для подтверждения!</string>
    <string name="settings">Настройки</string>
    <string name="not_registred">Войдите или зарегистируйтесь</string>
    <string name="Sign_In">Вход</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="Enter">Авторизация</string>
    <string name="Sign_out">Выход</string>
    <string name="password_hint_repeat">Повторите пароль</string>
    <string name="password_doesnt_match">Пароли не совпадают</string>
    <string name="email_reset_was_sent">Вам отправленно письмо для восстановление пароля</string>
    <string name="email_should_be_filled">Для восстановление пароля укажите ваш email </string>
    <string name="error_password_recover">Не удалось отправить запрос на востановление</string>
    <string name="need_permission_to_read_contacts">Необходимо предоставить разрешение для чтения контактов</string>
    <string name="need_permission_to_find_location">Необходимо разрешение определения местоположения</string>
    <string name="looks_like_location_disabled">Возможно, выключена функция определения местоположения</string>
    <string name="enter_query">Введите запрос</string>
    <string name="search_on_map">Поиск</string>
    <string name="map_mode">Режим карты</string>
    <string name="normal">Нормальный</string>
    <string name="satellites">Спутник</string>
    <string name="terrain">Схема</string>
    <string name="traffic">Трафик</string>
    <string name="start_marker">Старт</string>
    <string name="dialog_address_title">Найденный адресс</string>
    <string name="dialog_address_ok">Ok</string>
    <string name="enter_button_text">Войти</string>
    <string name="registry_text">Регистрация</string>
    <string name="empty_favourites">Добавьте фильмы в избранное</string>
</resources>