<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/details_fragment_margin_bottom"
    tools:context=".ui.views.DetailsPageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_of_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_16"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cover"
            android:layout_width="@dimen/image_description_size"
            android:layout_height="@dimen/image_description_size"
            android:src="@drawable/unknown_cover"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/shareFilm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shared"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textSize="@dimen/title_description_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cover"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:text="Дюна" />

        <TextView
            android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_description_text_size"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cover"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:ignore="MissingConstraints"
            tools:text="2022" />

        <TextView
            android:id="@+id/media_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/title_description_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cover"
            app:layout_constraintTop_toBottomOf="@+id/year"
            tools:ignore="MissingConstraints"
            tools:text="Фантастика" />

        <TextView
            android:id="@+id/vote_average"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/title_description_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cover"
            app:layout_constraintTop_toBottomOf="@+id/media_type"
            tools:text="Рейтинг фильма: " />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/like"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_favorite_is_not_checked"
            app:layout_constraintTop_toBottomOf="@+id/vote_average"
            app:layout_constraintStart_toEndOf="@+id/cover"
            app:layout_constraintEnd_toStartOf="@id/shareFilm"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/layout_margin_16"
        app:layout_constraintBottom_toTopOf="@id/data_of_last_watching"
        app:layout_constraintTop_toBottomOf="@id/title_of_description"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/data_of_last_watching"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/save_comments" />

    <Button
        android:id="@+id/save_comments"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/comments_field"
        android:layout_margin="4dp"
        android:text="@string/save_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/comments_field"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_comments"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_comments"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:layout_height="@dimen/comments_field"
            android:hint="@string/comments" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Error_rus"
        android:visibility="invisible"
        tools:ignore="MissingConstraints" />


    <FrameLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>